--- a/template/addProduct.html
+++ b/template/addProduct.html
@@ -23,11 +23,22 @@
     </form>
 </div> -->
 
+
+
 <form method="post" enctype="multipart/form-data"  class="container border border-primary col-md-6 p-3 my-3 rounded">
     {% csrf_token %}
 
-    {{product_form.as_p}}
-
+    <!-- {{product_form.as_p}} -->
+    {% for field in product_form %}
+        <div class="fieldWrapper">
+            {{ field.label_tag }} {{ field }}
+            {% if field.errors %}
+                <div class="text-danger">
+                    {{ field.errors }}
+                </div>
+            {% endif %}
+        </div>
+    {% endfor %}
     <button class="btn btn-primary w-100 mb-2" type="submit">Add Product</button>
 
 </form>
