--- a/template/common.html
+++ b/template/common.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <div class="container">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse " id="navbarNav">
+                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url "home" %}">Home</a>
                   </li>
@@ -27,9 +27,30 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                  </li>
+                  
+                  
+                  {% if request.user.is_authenticated %} 
+                                  
+                    <li class="nav-item">
+                      <form action="{% url 'logout' %}" method="post">
+                        {% csrf_token %}
+                        <button class="btn btn-primary" type="submit">Logout</button>
+                      </form>
+                    </li>
+
+                  {% else %}
+                  
+                    <li class="nav-item">
+                      <a class="btn btn-outline-primary">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="btn btn-primary ms-2" href="{% url 'login' %}">Login</a>
+                    </li>
+
+                  {% endif %}
+                    
+                  
+                  
                 </ul>
               </div>
             </div>
