--- a/template/common.html
+++ b/template/common.html
@@ -41,7 +41,7 @@
                   {% else %}
                   
                     <li class="nav-item">
-                      <a class="btn btn-outline-primary">Signup</a>
+                      <a class="btn btn-outline-primary" href="{% url 'signup' %}">Signup</a>
                     </li>
                     <li class="nav-item">
                       <a class="btn btn-primary ms-2" href="{% url 'login' %}">Login</a>
