--- a/template/Editprofile.html
+++ b/template/Editprofile.html
@@ -2,7 +2,15 @@
 {% load static %}
 {% block main_content %}
 
-
+    {% if messages %}
+        {% for message in messages %}
+            <div class="container alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+    
     <form method="post" enctype="multipart/form-data"  class="container border border-primary col-md-6 p-3 my-3 rounded">
         {% csrf_token %}
 
