--- a/template/addProduct.html
+++ b/template/addProduct.html
@@ -23,6 +23,14 @@
     </form>
 </div> -->
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="container alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+{% endif %}
 
 
 <form method="post" enctype="multipart/form-data"  class="container border border-primary col-md-6 p-3 my-3 rounded">
@@ -41,6 +49,7 @@
     {% endfor %}
     <button class="btn btn-primary w-100 mb-2" type="submit">Add Product</button>
 
+    <a href="{% url 'view-all-products' %}" class="text-center text-black d-block">View all products</a>
 </form>
 
 
