--- a/template/common.html
+++ b/template/common.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#">Features</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-cart-plus"></i> cart <span class="badge text-bg-danger">{{ cart_length }}</span></a>
                   </li>
                   
                   
@@ -53,6 +53,7 @@
                     </ul>
                   </li>
 
+
                   {% else %}
                   
                     <li class="nav-item">
@@ -71,6 +72,14 @@
             </div>
           </nav>
     </header>
+    {% if messages %}
+    {% for message in messages %}
+        <div class="container alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+    {% endif %}
 
     {% block main_content %}
     
@@ -87,5 +96,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/151670151e.js" crossorigin="anonymous"></script>
 </body>
 </html>
