--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
                     <p>{{ product.product_name }}</p>
                     <p>#{{product.price}}</p>
                     <p><a href="{% url 'view-product' product.id %}">view more..</a></p>
-                    <button class="btn btn-sm btn-secondary">add to cart</button>
+                    <a href="{% url 'add-to-cart' product.id %}" class="btn btn-sm btn-secondary">add to cart</a>
                     
                     <hr>
                 {% endfor %}
