--- a/template/common.html
+++ b/template/common.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#">Features</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-cart-plus"></i> cart <span class="badge text-bg-danger">{{ cart_length }}</span></a>
+                    <a class="nav-link" href="{% url 'view-cart' %}"><i class="fa-solid fa-cart-plus"></i> cart <span class="badge text-bg-danger">{{ cart_length }}</span></a>
                   </li>
                   
                   
